# planver-green-agent

./: .dockerignore  Dockerfile  README.md  generate_all_descriptions.py  pyproject.toml
pddl/barman/: description.yaml
pddl/blocksworld/: description.yaml
pddl/childsnack/: description.yaml
pddl/depots/: description.yaml
pddl/driverlog/: description.yaml
pddl/floortile/: description.yaml
pddl/freecell/: description.yaml
pddl/ged/: description.yaml
pddl/grid/: description.yaml
pddl/gripper/: description.yaml
pddl/hiking/: description.yaml
pddl/logistics/: description.yaml
pddl/miconic/: description.yaml
pddl/mprime/: description.yaml
pddl/nomystery/: description.yaml
pddl/parking/: description.yaml
pddl/pegsol/: description.yaml
pddl/pipesworld-notankage/: description.yaml
pddl/pipesworld-tankage/: description.yaml
pddl/rovers/: description.yaml
pddl/satellite/: description.yaml
pddl/scanalyzer/: description.yaml
pddl/snake/: description.yaml
pddl/sokoban/: description.yaml
pddl/termes/: description.yaml
pddl/tetris/: description.yaml  domain.pddl
pddl/thoughtful/: description.yaml
pddl/tidybot/: description.yaml
pddl/tpp/: description.yaml
pddl/visitall/: description.yaml
src/: agent.py  describe_pddl.py  server.py
tests/: conftest.py  test_agent.py  test_integration.py  test_validation.py
tests/mock_planner/: README.md  agent.py  executor.py  sample_plan.txt  server.py
